<resources>
    <string name="app_name">Shipping Calculator</string>
    <string name="weightLBL">Enter the weight of your package</string>
    <string name="zero">0</string>
    <string name="ouncesLBL">(in ounces)</string>
    <string name="baseLBL">Base Cost:</string>
    <string name="zeroDec">$0.00</string>
    <string name="addCostLBL">Added Cost:</string>
    <string name="totalLBL">Total Shipping Cost</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
